--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "axios": "^0.13.1",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -16,6 +17,7 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^2.7.0",
+    "redux": "^3.5.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
